Improved .env configuration with clear OpenAI API documentation for claim verification and confidence scoring

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,38 @@
-# MongoDB Configuration
+# ============================================
+# DATABASE CONFIGURATION
+# ============================================
 MONGO_URI=mongodb://mongo:27017/misinfo_db
 
-# Security
+# ============================================
+# SECURITY
+# ============================================
 JWT_SECRET=replace_with_a_secret
 
-# API Keys (get from respective providers)
+# ============================================
+# PRIMARY API - OPENAI (REQUIRED)
+# ============================================
+# This is the MAIN API used for:
+# - Claim decomposition and analysis
+# - Confidence score calculation
+# - Verdict generation (TRUE/FALSE/MIXTURE/UNVERIFIED)
+# - Evidence summarization and reasoning
+OPENAI_API_KEY=YOUR_OPENAI_KEY
+
+# ============================================
+# EVIDENCE SEARCH APIs (Optional)
+# ============================================
+# These APIs are used to gather evidence/sources for verification
 NEWSAPI_KEY=YOUR_NEWSAPI_KEY
-HUGGINGFACE_API_KEY=YOUR_HF_KEY_OR_LEAVE_EMPTY
-OPENAI_API_KEY=YOUR_OPENAI_KEY_OR_LEAVE_EMPTY
 GOOGLE_CSE_API_KEY=YOUR_GOOGLE_CSE_KEY
 GOOGLE_CSE_ID=YOUR_CSE_ID
+HUGGINGFACE_API_KEY=YOUR_HF_KEY_OR_LEAVE_EMPTY
 
-# Scheduler Configuration
+# ============================================
+# SCHEDULER CONFIGURATION
+# ============================================
 SCHED_RUN_INTERVAL_MIN=10
 
-# Application Configuration
+# ============================================
+# APPLICATION CONFIGURATION
+# ============================================
 PORT=8000
